fix: z-index mobile-menu

--- a/pages/index.css
+++ b/pages/index.css
@@ -94,6 +94,7 @@
     .header__mobile-menu {
         display: none;
         position: absolute;
+        z-index: 20;
         top: 0;
         left: 0;
         width: 300px;
